[package]
name = "chip8_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.14.2"
pollster = "0.2.5"
bytemuck = { version = "1.12.3", features = ["derive"] }
